FrostWire 2.0.0 build 483 - DEC/23/2017
 - New Transfer Detail screens for BitTorrent transfers.
 - Faster startup
 - Library updates: jlibtorrent 1.2.0.15, gms 11.6.2, mopub 4.19.0, flexbox 0.3.1, applovin 7.6.2, presage 2.2.7
 - Translations update

FrostWire 1.9.9 build 478 - DEC/13/2017
 - App Startup is faster
 - Multiple freezes fixed, memory leaks fixed, crashes fixed
 - Android Jelly-Bean (<4.4) support dropped, minSdkVersion=19
 - Library updates: jlibtorrent 1.2.0.15, gms 11.6.2, mopub 4.19.0, flexbox 0.3.1, applovin 7.6.0, presage 2.2.4
 - Image viewer can now go to next and previous pictures with fling gesture
 - Update system refactor, cleanup, updates shown on nav menu
 - New Afrikaans translation
 - Transfer screen on rotation would not keep last tab selected
 - Java 8 usage, gradle 4.3.1
 - compileSDKVersion 27, support libraries 27.0.2, kotlin plugin 1.1.51
 - Material design dialog update
 - TPB domain update

FrostWire 1.9.9 - OCT/05/2017
 - Search: More search results when not in WiFi
 - Search: New Pixabay image search
 - Search: YT, SC, EZTV, Torlock, Yify, Zooqle fixed
 - Search: BTJunkie removed
 - Transfers: New 'Seeding' tab
 - Transfers: Shows 'Downloading Torrent' transfer when a magnet download starts
 - Download: Yify magnets can now be found in DHT
 - Creative Commons Features removed for Google Play users, available on FrostWire Plus
 - BitTorrent and DHT IPv6 connectivity improvements
 - New jlibtorrent 1.2.0.13-RC4
 - Improved SSL compatibility
 - Filtering bug fixes
 - Audio Player 'Clear Queue' fix
 - Crash fixes, performance upgrades
 - ogury 2.2.1,  applovin-sdk 7.3.2, mopub 4.16.1
 - compileSDK 26, gms 11.2.2, gradle 4.1, android support 26.0.2, okhttp 3.9.0
 - Update in VPN offering
 - Fixes freeze copying magnets to clipboard
 - Less ads
 - Music player has all horizontal layouts
 - Warn user about Internet Connection dropped

FrostWire 1.9.8 - JUL/26/2017
 - More robust app startup
 - New search filtering tools