@@ -27,10 +27,12 @@ import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
 import android.content.ServiceConnection;
+import android.graphics.Bitmap;
 import android.media.AudioManager;
 import android.media.audiofx.AudioEffect;
 import android.net.Uri;
 import android.os.Bundle;
+import android.os.Environment;
 import android.os.Handler;
 import android.os.IBinder;
 import android.os.Message;
@@ -93,6 +95,9 @@ import com.frostwire.uxstats.UXStats;
 import com.mopub.mobileads.MoPubErrorCode;
 import com.mopub.mobileads.MoPubView;
 
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
 import java.lang.ref.WeakReference;
 import java.util.HashMap;
 import java.util.Map;
@@ -431,11 +436,21 @@ public final class AudioPlayerActivity extends AbstractActivity implements
 
         // Favorite action
         menuInflater.inflate(R.menu.player_favorite, menu);
-        // Shuffle all
-        menuInflater.inflate(R.menu.player_shuffle, menu);
         // Share, ringtone, and equalizer
         menuInflater.inflate(R.menu.player_audio_player, menu);
+        // Shuffle all
+        menuInflater.inflate(R.menu.player_shuffle, menu);
+
         return super.onCreateOptionsMenu(menu);
+    }
+
+    @Override
+    public boolean onMenuOpened(int featureId, Menu menu) {
+        // hide ads in case of a share call
+        if (!Offers.disabledAds() && mAlbumArt.getVisibility() == View.GONE) {
+            mDismissAlbumArtAdButton.performClick();
+        }
+        return super.onMenuOpened(featureId, menu);
     }
 
     @Override
@@ -1153,16 +1168,41 @@ public final class AudioPlayerActivity extends AbstractActivity implements
         if (currentAudioId == -1 || trackName == null) {
             return;
         }
+
+        // take screenshot
+        View rootView = getWindow().getDecorView().getRootView();
+        rootView.setDrawingCacheEnabled(true);
+        Bitmap screenshotBitmap = Bitmap.createBitmap(rootView.getDrawingCache());
+        rootView.setDrawingCacheEnabled(false);
+        File screenshotFile = new File(Environment.getExternalStorageDirectory().toString(), "fwPlayerScreenshot.tmp.jpg");
+        if (screenshotFile.exists()) {
+            screenshotFile.delete();
+            try {
+                screenshotFile.createNewFile();
+            } catch (IOException ignore) {
+            }
+        }
+        try {
+            FileOutputStream fos = new FileOutputStream(screenshotFile);
+            screenshotBitmap.compress(Bitmap.CompressFormat.JPEG, 100, fos);
+            fos.flush();
+            fos.close();
+        } catch (Throwable t) {
+            screenshotFile.delete();
+            screenshotFile = null;
+        }
         final Intent shareIntent = new Intent();
         final String artistName = MusicUtils.getArtistName();
-
         final String shareMessage = (artistName != null) ? getString(R.string.now_listening_to, trackName, artistName) :
                 getString(R.string.now_listening_to_no_artist_available, trackName);
-
         shareIntent.setAction(Intent.ACTION_SEND);
-        shareIntent.setType("text/plain");
         shareIntent.putExtra(Intent.EXTRA_TEXT, shareMessage);
-        shareIntent.putExtra(Intent.EXTRA_STREAM, Uri.parse(MediaStore.Audio.Media.EXTERNAL_CONTENT_URI + "/" + currentAudioId));
+        if (screenshotFile != null && screenshotFile.canRead() && screenshotFile.length() > 0) {
+            shareIntent.setType("image/jpg");
+            shareIntent.putExtra(Intent.EXTRA_STREAM, UIUtils.getFileUri(this, screenshotFile.getAbsolutePath(), false));
+        } else {
+            shareIntent.setType("text/plain");
+        }
         startActivity(Intent.createChooser(shareIntent, getString(R.string.share_track_using)));
     }
 
